--- a/controle-de-pessoas/src/main/resources/application.properties
+++ b/controle-de-pessoas/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-# alterando a porta
-server.port=8082
+
+#porta de conexao
+server.port = 0
 
 # dando nome ao microsserviço
-spring.application.name=zuul-server
+spring.application.name=controle-pessoas-ms
 eureka.instance.hostname=localhost
 
 # Url onde os serviços vão se registrar
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
-eureka.instance.instance-id=${spring.application.name}
+eureka.instance.instance-id=${spring.application.name}:${random.value}
