Conexoes sincronas part 2

--- a/controle-animais-ms/src/main/resources/application.properties
+++ b/controle-animais-ms/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #Caminho do banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5434/petshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/petshop
 
 #Nome do username
 spring.datasource.username=postgres
 
 #Senha de conexão
-spring.datasource.password=
+spring.datasource.password=123456
 
 #Nome do driver
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -21,5 +21,5 @@ server.port=0
 spring.application.name=controle-animais-ms
 eureka.instance.hostname= localhost
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
