--- a/controle-pessoas-ms/src/main/resources/application.properties
+++ b/controle-pessoas-ms/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #Caminho do banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5434/petshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/petshop
 
 #Nome do username
 spring.datasource.username=postgres
 
 #Senha de conexão
-spring.datasource.password=
+spring.datasource.password=123456
 
 #Nome do driver
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -23,7 +23,7 @@ spring.application.name=controle-pessoas-ms
 sprig.application.host= localhost
 
 #URL de conexão com o eureka-server
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 
