--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # alterando a porta
-server.port=8081
+server.port = 8010
 
-# dando nome ao microsserviço
-spring.application.name=eureka-server
+# dando nome ao nosso microsserviço
+spring.application.name = eureka-server
 
-# Url onde os serviços vão se registrar
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+# Url a qual os serviços vão se registrar
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+eureka.client.fetch-registry = false
+eureka.client.register-with-eureka = false
+
