--- a/zuul-service/src/main/resources/application.properties
+++ b/zuul-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # alterando a porta
-server.port=8082
+server.port = 8011
 
-# dando nome ao microsserviço
-spring.application.name=zuul-server
-eureka.instance.hostname=localhost
+# dando nome ao nosso microsserviço
+spring.application.name = zuul-server
+eureka.instance.hostname= localhost
 
-# Url onde os serviços vão se registrar
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
-eureka.instance.instance-id=${spring.application.name}
+# Url a qual os serviços vão se registrar
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+eureka.instance.instance-id = ${spring.application.name}
